@@ -1,5 +1,10 @@
 2014-05-26  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DBrowserEditor.cpp:
+	* OutlineEditor.cpp: 
+
+2014-05-26  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* BrowserWindow.cpp:
 	* X3DBrowserEditor.h:
 	* X3DBrowserEditor.cpp:
