@@ -2,6 +2,10 @@
 
 	* OutlineEditor.x3d: 
 
+2014-05-26  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* OutlineEditor.x3d: 
+
 2014-05-25  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* OutlineEditor-IMPORT.x3dv:
